Ugly fix for seahorn/crab-llvm to find dynamic library

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,5 +9,14 @@ install(TARGETS Crab
   LIBRARY DESTINATION crab/lib
   ARCHIVE DESTINATION crab/lib)
 
+if (NOT TopLevel)
+  ## This is ugly fix so that seahorn and crab-llvm can find Crab if
+  ## dynamically linked. It has to do with how CMAKE_INSTALL_RPATH is
+  ## handled by these tools.
+  install(TARGETS Crab
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib)
+endif()  
+
 
 
