Add example for using elina

--- a/external/apron/Makefile
+++ b/external/apron/Makefile
@@ -26,8 +26,17 @@ LDD_LIBS := \
     $(CRAB_INSTALL)/ldd/lib/libmtr.a \
     $(CRAB_INSTALL)/ldd/lib/libepd.a 
 
+APRON_LIBS := \
+    $(CRAB_INSTALL)/apron/lib/libpolkaMPQ.a \
+    $(CRAB_INSTALL)/apron/lib/liboctD.a \
+    $(CRAB_INSTALL)/apron/lib/liboptoct.a \
+    $(CRAB_INSTALL)/apron/lib/liblinkedlistapi.a \
+    $(CRAB_INSTALL)/apron/lib/libapron.a \
+    $(CRAB_INSTALL)/apron/lib/libboxMPQ.a \
+    $(CRAB_INSTALL)/apron/lib/libitvMPQ.a
+
 LDLIBS := \
-     $(CRAB_LIBS) $(LDD_LIBS) \
+     $(CRAB_LIBS) $(LDD_LIBS) $(APRON_LIBS) \
      -lmpfr -lgmpxx -lgmp -lm -lstdc++ 
 
 CXXFLAGS := \
@@ -37,6 +46,7 @@ CXXFLAGS := \
      -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
      -I $(CRAB_INSTALL)/crab/include \
      -I $(CRAB_INSTALL)/ldd/include/ldd \
+     -I $(CRAB_INSTALL)/apron/include \
      -O2 -g -std=c++11
 
 # Lookup paths for crab shared libraries
@@ -59,6 +69,7 @@ crab_install:
 	git clone https://github.com/seahorn/crab.git crab
 	mkdir -p crab/build
 	cd crab/build \
-	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL) -DUSE_LDD=ON  ../ \
-	    && cmake --build . --target ldd && cmake ../ \
-	    && cmake --build . --target install
+	     && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL) -DUSE_LDD=ON -DUSE_APRON=ON ../ \
+	     && cmake --build . --target ldd && cmake ../ \
+	     && cmake --build . --target apron && cmake ../ \
+	     && cmake --build . --target install
