--- a/external/elina/Makefile
+++ b/external/elina/Makefile
@@ -26,23 +26,36 @@ LDD_LIBS := \
     $(CRAB_INSTALL)/ldd/lib/libmtr.a \
     $(CRAB_INSTALL)/ldd/lib/libepd.a 
 
+ELINA_LIBS := \
+    $(CRAB_INSTALL)/elina/lib/libelinalinearize.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/libelinaux.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/liboptoct.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/liboptpoly.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/liboptzones.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/libpartitions.${DYLIB} \
+    $(CRAB_INSTALL)/elina/lib/libzonotope.${DYLIB}
+
+# Lookup paths for crab and elina shared libraries
+LDFLAGS := -Wl,-rpath,$(CRAB_INSTALL)/crab/lib/,-rpath,$(CRAB_INSTALL)/elina/lib/
+
 LDLIBS := \
-     $(CRAB_LIBS) $(LDD_LIBS) \
-     -lmpfr -lgmpxx -lgmp -lm -lstdc++ 
+    $(CRAB_LIBS) $(LDD_LIBS) $(ELINA_LIBS) \
+    -lmpfr -lgmpxx -lgmp -lm -lstdc++ 
 
 CXXFLAGS := \
-     -Wall -Werror -Wfatal-errors \
-     -Wno-unused-local-typedefs -Wno-inconsistent-missing-override -Wno-unused-const-variable \
-     -Wno-uninitialized -Wno-deprecated \
-     -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
-     -I $(CRAB_INSTALL)/crab/include \
-     -I $(CRAB_INSTALL)/ldd/include/ldd \
-     -O2 -g -std=c++11
-
-# Lookup paths for crab shared libraries
-LDFLAGS := -Wl,-rpath,$(CRAB_INSTALL)/crab/lib/
+    -Wall -Werror -Wfatal-errors \
+    -Wno-unused-function \
+    -Wno-unused-local-typedefs -Wno-inconsistent-missing-override -Wno-unused-const-variable \
+    -Wno-uninitialized -Wno-deprecated \
+    -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
+    -I $(CRAB_INSTALL)/crab/include \
+    -I $(CRAB_INSTALL)/ldd/include/ldd \
+    -I $(CRAB_INSTALL)/elina/include \
+    -O2 -g -std=c++11
 
 all: domain analysis
+# Ugly hack: add elina lib directory to rpath is not enough
+	@echo "Compilation done. \nType \"export LD_LIBRARY_PATH=$(CRAB_INSTALL)/elina/lib\""
 
 %.o:  $(CXX) $(CXXFLAGS) $< -c -o $@
 
@@ -59,6 +72,7 @@ crab_install:
 	git clone https://github.com/seahorn/crab.git crab
 	mkdir -p crab/build
 	cd crab/build \
-	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL) -DUSE_LDD=ON  ../ \
+	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL) -DUSE_LDD=ON -DUSE_ELINA=ON ../ \
 	    && cmake --build . --target ldd && cmake ../ \
+	    && cmake --build . --target elina && cmake ../ \
 	    && cmake --build . --target install
