--- a/external/Makefile
+++ b/external/Makefile
@@ -17,18 +17,8 @@ else
 endif
 CRAB_LIBS = $(CRAB_INSTALL)/crab/lib/libCrab.${DYLIB}
 
-LDD_LIBS := \
-    $(CRAB_INSTALL)/ldd/lib/libldd.a \
-    $(CRAB_INSTALL)/ldd/lib/libtvpi.a \
-    $(CRAB_INSTALL)/ldd/lib/libcudd.a \
-    $(CRAB_INSTALL)/ldd/lib/libst.a \
-    $(CRAB_INSTALL)/ldd/lib/libutil.a \
-    $(CRAB_INSTALL)/ldd/lib/libmtr.a \
-    $(CRAB_INSTALL)/ldd/lib/libepd.a 
-
 LDLIBS := \
-     $(CRAB_LIBS) $(LDD_LIBS) \
-     -lmpfr -lgmpxx -lgmp -lm -lstdc++ 
+     $(CRAB_LIBS) -lgmpxx -lgmp -lm -lstdc++ 
 
 CXXFLAGS := \
      -Wall -Werror -Wfatal-errors \
@@ -36,7 +26,6 @@ CXXFLAGS := \
      -Wno-uninitialized -Wno-deprecated \
      -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
      -I $(CRAB_INSTALL)/crab/include \
-     -I $(CRAB_INSTALL)/ldd/include/ldd \
      -O2 -g -std=c++11
 
 # Lookup paths for crab shared libraries
@@ -59,6 +48,5 @@ crab_install:
 	git clone https://github.com/seahorn/crab.git crab
 	mkdir -p crab/build
 	cd crab/build \
-	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL) -DUSE_LDD=ON  ../ \
-	    && cmake --build . --target ldd && cmake ../ \
+	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL)  ../ \
 	    && cmake --build . --target install
