[NEW] add CFG transformations:
- DCE (dead code elimination).
- Replace safe assertions with assume statements.

Note that the Crab Control-Flow Graph is not very suitable for program
transformations so we should limit the number of transformations as much as possible.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,11 +36,13 @@ function (AddTestDir dirName)
 endfunction ()  
 
 
-AddTestDir (domains)
-AddTestDir (domains/wrapint)
-AddTestDir (inter)
-AddTestDir (cg)
-AddTestDir (cfg)
-AddTestDir (thresholds)
-AddTestDir (checkers)
-AddTestDir (preconditions)
+AddTestDir(domains)
+AddTestDir(domains/wrapint)
+AddTestDir(transforms)
+AddTestDir(inter)
+AddTestDir(cg)
+AddTestDir(cfg)
+AddTestDir(thresholds)
+AddTestDir(checkers)
+AddTestDir(preconditions)
+
