[FIXED] linking problem with Elina for linux. Add linker flag --disable-new-tags. Thanks to Elazar Gershuni.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,6 +250,9 @@ if (USE_ELINA)
     include_directories (${ELINA_INCLUDE_DIR})
     set (ELINA_LIBS ${ELINA_LIBRARY})
     set (HAVE_ELINA TRUE)
+    if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")    
+      set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--disable-new-dtags")
+    endif()
   else()
     ExternalProject_Get_Property (elina INSTALL_DIR)
     set (ELINA_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of elina" FORCE)
