Change sample makefiles to build dynamic library.
Set -DBUILD_CRAB_LIBS_SHARED=OFF if you want to build statically.
When building statically, make sure that CRAB_LIBS is changed
accordingly to get libCrab.a rather than libCrab.so or libCrab.dylib.

--- a/external/Makefile
+++ b/external/Makefile
@@ -48,5 +48,6 @@ crab_install:
 	git clone https://github.com/seahorn/crab.git crab
 	mkdir -p crab/build
 	cd crab/build \
-	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL)  ../ \
+	    && cmake -DCMAKE_INSTALL_PREFIX=$(CRAB_INSTALL)  \
+	       -DBUILD_CRAB_LIBS_SHARED=ON ../ \
 	    && cmake --build . --target install
