--- a/.travis.yml
+++ b/.travis.yml
@@ -21,17 +21,17 @@ install: true
 script:
   - docker build --build-arg UBUNTU=${UBUNTU_DIST} --build-arg BUILD_TYPE=${BUILD_TYPE} -t seahorn/crab:${UBUNTU_DIST} -f docker/crab.Dockerfile .
   
-  - 'if [ "$TRAVIS_EVENT_TYPE" = "cron" ] ;
-        then echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-          && docker push seahorn/crab:${UBUNTU_DIST};
-	  
-	  if [ "$BUILD_TYPE" = "Coverage" ] ;
-             docker run  -v $(pwd):/host -it seahorn/crab:${UBUNTU_DIST} /bin/sh -c 
-             "bash /crab/test/run_coverage.sh /crab/build /crab && mv /crab/build/all.info /host"
-             && bash <(curl -s https://codecov.io/bash) -Z -f all.info
-	  fi
-	  
+  - 'if [ "$TRAVIS_EVENT_TYPE" = "cron" ] ; then 
+        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+          && docker push seahorn/crab:${UBUNTU_DIST};	  	  
      fi '
+     
+  - 'if [ "$BUILD_TYPE" = "Coverage" ] ; then 
+        docker run  -v $(pwd):/host -it seahorn/crab:${UBUNTU_DIST} /bin/sh -c 
+             "bash /crab/test/run_coverage.sh /crab/build /crab && mv /crab/build/all.info /host"
+             && bash <(curl -s https://codecov.io/bash) -Z -f all.info;
+     fi '
+   
   
 notifications:
   email:
